--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -16,4 +16,15 @@ RUN echo '{"version":3,"id":"some-uuid","address":"110cb167ea55c3467cd82fdef9dd5
 RUN echo -e "123456\n123456\n" | geth account new --password /dev/stdin --datadir /root/.ethereum
 
 EXPOSE 30303 30303/udp 8545
-CMD ["geth","--datadir", "/root/.ethereum","--networkid", "12345","--http","--http.addr", "0.0.0.0","--http.port", "8545","--http.api", "eth,net,web3,personal","--allow-insecure-unlock","--dev","--unlock", "0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8", "--password", "/dev/null"]
+CMD ["geth",
+     "--datadir", "/root/.ethereum",
+     "--networkid", "12345",
+     "--http",
+     "--http.addr", "0.0.0.0",
+     "--http.port", "8545",
+     "--http.api", "eth,net,web3,personal",
+     "--allow-insecure-unlock",
+     "--dev",
+     "--unlock", "0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8",
+     "--password", "/dev/null"
+]
