--- a/express/package.json
+++ b/express/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "crypto": "1.0.1",
     "nodemailer": "^6.9.1",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.29.3",
@@ -15,6 +14,7 @@
     "cloudinary": "^1.32.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web3": "^1.10.1"
   }
 }
