--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,46 +1,39 @@
-worker_processes auto;
-events { worker_connections 1024; }
+user  nginx;
+worker_processes  auto;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-    sendfile on;
-    keepalive_timeout 65;
+    include       /etc/nginx/mime.types;
+    sendfile        on;
 
-    # HTTP => HTTPS
     server {
         listen 80;
-        server_name suzookaizoku.com www.suzookaizoku.com;
-        return 301 https://$host$request_uri;
-    }
+        server_name localhost;  # 或是 suzookaizoku.com 也可
 
-    server {
-        listen 443 ssl;
-        server_name suzookaizoku.com www.suzookaizoku.com;
-
-        ssl_certificate /etc/letsencrypt/live/suzookaizoku.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/suzookaizoku.com/privkey.pem;
-
-        # 前端
+        # 反向代理到前端
         location / {
-            proxy_pass http://frontend:3001;
-            try_files $uri $uri/ /index.html;
+            proxy_pass http://suzoo_frontend:3001;
         }
 
-        # Express => /api/
+        # 反向代理到 Express API
         location /api/ {
-            rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://express:3000;
+            rewrite ^/api/(.*) /$1 break;
+            proxy_pass http://suzoo_express:3000/;
         }
 
-        # FastAPI => /fastapi/
+        # 反向代理到 FastAPI
         location /fastapi/ {
-            rewrite ^/fastapi/(.*)$ /$1 break;
-            proxy_pass http://fastapi:8000;
+            rewrite ^/fastapi/(.*) /$1 break;
+            proxy_pass http://suzoo_fastapi:80/;
         }
 
-        # Crawler => /crawler/
+        # 反向代理到 Crawler (若需對外)
         location /crawler/ {
-            rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;
+            rewrite ^/crawler/(.*) /$1 break;
+            proxy_pass http://suzoo_crawler:8081/;
         }
     }
 }
