--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.95.0
 uvicorn==0.21.1
 requests==2.28.2
-web3==5.31.3
-python-dotenv==0.21.1
+beautifulsoup4==4.12.2
 psycopg2-binary==2.9.6
-py-solc-x
+python-dotenv==0.21.1
+py-solc-x==1.1.1  # 修正包名并指定最新版本
+web3==6.0.0        # 升级到兼容版本
