--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,38 +2,66 @@ user  nginx;
 worker_processes  auto;
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
     include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
     sendfile        on;
+    keepalive_timeout  65;
+    gzip  on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
-        server_name localhost;  # 或是 suzookaizoku.com 也可
+        server_name suzookaizoku.com www.suzookaizoku.com;
 
-        # 反向代理到前端
+        # 前端路由處理 (React SPA)
         location / {
             proxy_pass http://suzoo_frontend:3001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            try_files $uri $uri/ /index.html;  # 支持前端路由
         }
 
-        # 反向代理到 Express API
+        # Express API 路徑 (前綴 /api)
         location /api/ {
-            rewrite ^/api/(.*) /$1 break;
-            proxy_pass http://suzoo_express:3000/;
+            rewrite ^/api(/.*)$ $1 break;  # 移除 /api 前綴
+            proxy_pass http://suzoo_express:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_connect_timeout 300s;
+            proxy_read_timeout 300s;
         }
 
-        # 反向代理到 FastAPI
+        # FastAPI 路徑 (前綴 /fastapi)
         location /fastapi/ {
-            rewrite ^/fastapi/(.*) /$1 break;
-            proxy_pass http://suzoo_fastapi:80/;
+            rewrite ^/fastapi(/.*)$ $1 break;  # 移除 /fastapi 前綴
+            proxy_pass http://suzoo_fastapi:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # 反向代理到 Crawler (若需對外)
+        # 爬蟲服務 (前綴 /crawler)
         location /crawler/ {
-            rewrite ^/crawler/(.*) /$1 break;
-            proxy_pass http://suzoo_crawler:8081/;
+            rewrite ^/crawler(/.*)$ $1 break;  # 移除 /crawler 前綴
+            proxy_pass http://suzoo_crawler:8081;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # 健康檢查端點
+        location /health {
+            add_header Content-Type text/plain;
+            return 200 "Nginx is healthy";
+        }
+
+        # 靜態檔案緩存設定 (可選)
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+            expires 1y;
+            add_header Cache-Control "public, no-transform";
         }
     }
 }
