--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# 已移除 version 聲明 (新版本不再需要)
 services:
   db:
     image: postgres:15
@@ -12,7 +11,7 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - suzoo_net
-    healthcheck:  # 添加健康檢查
+    healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
@@ -24,11 +23,10 @@ services:
     networks:
       - suzoo_net
     ports:
-      - "8545:8545"  # 只保留必要 RPC 端口
+      - "8545:8545"  # RPC
     volumes:
       - geth_data:/root/.ethereum
-    # 移除多餘端口 (30303 用於 P2P，容器間不需要映射)
-    # 確保 geth/Dockerfile 的 CMD 沒有重複 "geth" 前綴
+    # 注意：請確保 geth/Dockerfile 裡的 CMD 只有參數，沒有重複 "geth" 單字
 
   ipfs:
     build: ./ipfs
@@ -36,8 +34,8 @@ services:
     networks:
       - suzoo_net
     ports:
-      - "5001:5001"  # 只暴露必要 API 端口
-      - "8080:8080"  # 閘道器端口
+      - "5001:5001"   # IPFS API
+      - "8080:8080"   # IPFS Gateway
     volumes:
       - ipfs_data:/data/ipfs
 
@@ -46,7 +44,7 @@ services:
     container_name: suzoo_express
     depends_on:
       db:
-        condition: service_healthy  # 嚴格依賴檢查
+        condition: service_healthy
       geth:
         condition: service_started
       ipfs:
@@ -55,7 +53,7 @@ services:
       - .env
     networks:
       - suzoo_net
-    # 移除 ports:3000 (統一由 Nginx 代理)
+    # 前端統一由 Nginx 代理 => 不需要暴露 3000:3000
 
   fastapi:
     build: ./fastapi
@@ -71,12 +69,12 @@ services:
       - .env
     networks:
       - suzoo_net
-    # 添加健康檢查
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+    # 同理，FastAPI 由 Nginx 代理 => 無需對外開放 port
 
   crawler:
     build: ./crawler
@@ -85,14 +83,14 @@ services:
       - .env
     networks:
       - suzoo_net
-    # 移除 ports:8081 (內部服務不需暴露)
+    # 若爬蟲只在內部呼叫 => 不需要對外暴露 8081:8081
 
   frontend:
     build: ./frontend
     container_name: suzoo_frontend
     networks:
       - suzoo_net
-    # 移除 ports:3001 (由 Nginx 代理)
+    # React前端 => Nginx 代理 => 無需 ports
 
   nginx:
     build: ./nginx
@@ -103,18 +101,17 @@ services:
       express:
         condition: service_started
       fastapi:
-        condition: service_healthy  # 嚴格依賴檢查
+        condition: service_healthy
       crawler:
         condition: service_started
     networks:
       - suzoo_net
     ports:
-      - "80:80"  # 正式環境再啟用 443
-    # 正式環境取消註解以下內容
+      - "80:80"
+    # 正式環境 SSL => 取消註解以下內容
     # volumes:
     #   - /etc/letsencrypt:/etc/letsencrypt:ro
     # ports:
-    #   - "80:80"
     #   - "443:443"
 
 volumes:
