--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,10 +1,11 @@
-# 確保第一行是 FROM 指令
+# 使用官方 Geth 鏡像
 FROM ethereum/client-go:latest
 
-WORKDIR /root
-COPY genesis.json .
+# 將創世文件複製到容器中
+COPY genesis.json /genesis.json
 
-RUN mkdir -p /root/.ethereum && \
-    geth init --datadir /root/.ethereum genesis.json
-# 正確 CMD 寫法 (不要重複 geth)
-CMD ["--datadir", "/root/.ethereum", "--networkid", "12345", "--http", "--http.addr", "0.0.0.0", "--http.port", "8545", "--http.api", "eth,net,web3,personal", "--allow-insecure-unlock", "--dev"]
+# 指定默認數據目錄 (與 docker-compose 的 volume 掛載路徑一致)
+VOLUME /data
+
+# 直接使用默認啟動命令 (具體參數在 docker-compose.yml 的 entrypoint 中動態組合)
+CMD ["--http", "--http.addr", "0.0.0.0", "--http.api", "eth,net,web3,personal", "--allow-insecure-unlock", "--dev"]
