--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,27 @@ services:
   db:
     image: postgres:15
     container_name: suzoo_db
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    networks:
-      - suzoo_net
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  geth:
+    # ... 保持原有配置不變 ...
+  
+  geth:  # 注意：此處縮進必須與 db 同級！
     build: ./geth
     container_name: suzoo_geth
     networks:
       - suzoo_net
     ports:
-      - "8545:8545"  # RPC
+      - "8545:8545"
     volumes:
-      - geth_data:/root/.ethereum
-    # 注意：請確保 geth/Dockerfile 裡的 CMD 只有參數，沒有重複 "geth" 單字
+      - geth_data:/data
+      - ./geth/genesis.json:/genesis.json
+    entrypoint: sh -c '
+      if [ ! -f "/data/geth/chaindata/CURRENT" ]; then
+        echo "Initializing Genesis Block...";
+        geth --datadir /data init /genesis.json;
+      fi;
+      exec geth --datadir /data --networkid 12345 "$@"
+    '
+    environment:
+      - ETHEREUM_NETWORK_ID=12345
 
   ipfs:
     build: ./ipfs
