--- a/express/package.json
+++ b/express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kai-express-v6",
+  "name": "kai-express-v7",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "crypto": "1.0.1",
     "nodemailer": "^6.9.1",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.29.3",
@@ -15,6 +16,6 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "uuid": "^9.0.0",
-    "web3": "^1.10.1"
+    "web3": "^1.9.0"
   }
 }
