--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -7,3 +7,5 @@ python-dotenv==0.21.1
 py-solc-x==1.1.1  # 修正包名并指定最新版本
 web3==6.0.0        # 升级到兼容版本
 python-multipart>=0.0.5  # 必須添加此行
+solcx==0.14.0
+web3==5.31.3
