--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,67 +1,47 @@
-user  nginx;
-worker_processes  auto;
-
-events {
-    worker_connections  1024;
-}
+worker_processes auto;
+events { worker_connections 1024; }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
-    gzip  on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    sendfile on;
+    keepalive_timeout 65;
 
+    # HTTP => HTTPS
     server {
         listen 80;
-        server_name suzookaizoku.com www.suzookaizoku.com;
+        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+        return 301 https://$host$request_uri;
+    }
 
-        # 前端路由處理 (React SPA)
+    server {
+        listen 443 ssl;
+        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+        # SSL 憑證路徑 (ex: Let's Encrypt)
+        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+
+        # 前端
         location / {
-            proxy_pass http://suzoo_frontend:3001;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            try_files $uri $uri/ /index.html;  # 支持前端路由
+            proxy_pass http://frontend:80;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Express API 路徑 (前綴 /api)
+        # Express => /api/
         location /api/ {
-            rewrite ^/api(/.*)$ $1 break;  # 移除 /api 前綴
-            proxy_pass http://suzoo_express:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_connect_timeout 300s;
-            proxy_read_timeout 300s;
+            rewrite ^/api/(.*)$ /$1 break;
+            proxy_pass http://express:3000;
         }
 
-        # FastAPI 路徑 (前綴 /fastapi)
+        # FastAPI => /fastapi/
         location /fastapi/ {
-            rewrite ^/fastapi(/.*)$ $1 break;  # 移除 /fastapi 前綴
-            proxy_pass http://suzoo_fastapi:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            rewrite ^/fastapi/(.*)$ /$1 break;
+            proxy_pass http://fastapi:8000;
         }
 
-        # 爬蟲服務 (前綴 /crawler)
+        # Crawler => /crawler/
         location /crawler/ {
-            rewrite ^/crawler(/.*)$ $1 break;  # 移除 /crawler 前綴
-            proxy_pass http://suzoo_crawler:8081;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # 健康檢查端點
-        location /health {
-            add_header Content-Type text/plain;
-            return 200 "Nginx is healthy";
-        }
-
-        # 靜態檔案緩存設定 (可選)
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-            expires 1y;
-            add_header Cache-Control "public, no-transform";
+            rewrite ^/crawler/(.*)$ /$1 break;
+            proxy_pass http://crawler:8081;
         }
     }
 }
