--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,47 +1,73 @@
 worker_processes auto;
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
     sendfile on;
     keepalive_timeout 65;
-
-    # HTTP => HTTPS
+    
+    # ------------------------------------------------
+    # 1) 先處理 http(80) => 301 重導到 https
+    # ------------------------------------------------
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
+    # ------------------------------------------------
+    # 2) https server
+    # ------------------------------------------------
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # SSL 憑證路徑 (ex: Let's Encrypt)
+        # 這裡套用 Let's Encrypt 簽發的 SSL 憑證
         ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # 前端
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+        ssl_prefer_server_ciphers off;
+
+        # ------------------------------------------------
+        # 前端 React (port 80 in container)
+        # ------------------------------------------------
         location / {
             proxy_pass http://frontend:80;
-            try_files $uri $uri/ /index.html;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # ------------------------------------------------
         # Express => /api/
+        # ------------------------------------------------
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
+        # ------------------------------------------------
         # FastAPI => /fastapi/
+        # ------------------------------------------------
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
+            proxy_set_header Host $host;
         }
 
+        # ------------------------------------------------
         # Crawler => /crawler/
+        # ------------------------------------------------
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
+            proxy_set_header Host $host;
         }
     }
 }
