--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -4,5 +4,5 @@ requests==2.28.2
 beautifulsoup4==4.12.2
 psycopg2-binary==2.9.6
 python-dotenv==0.21.1
-solcx==0.14.0
+py-solc-x==1.1.1  # 修正包名和版本
 web3==5.31.3
